// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Karura <-> Basilisk > Basilisk tranfer DAI to Karura > events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000000,
      "currencyId": {
        "Erc20": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
      },
      "from": "rPWzRkpPjuceq6Po91sfHLZJ9wo6wzx4PAdjUH91ckv81nv",
      "to": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Transferred",
    "section": "currencies",
  },
]
`;

exports[`Karura <-> Basilisk > Basilisk tranfer DAI to Karura > events 2`] = `
[
  {
    "data": {
      "contract": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
      "from": "0x4d9cf56ac6f1b4b6be4757ad0af3348fc6a918c2",
      "logs": [
        {
          "address": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 50000)",
      "usedStorage": "-64",
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000000000000000,
          },
          "id": {
            "Concrete": {
              "interior": {
                "X2": [
                  {
                    "Parachain": 2000,
                  },
                  {
                    "GeneralKey": {
                      "data": "(hash)",
                      "length": 21,
                    },
                  },
                ],
              },
              "parents": 1,
            },
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2100)",
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000000000000000,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "Parachain": 2000,
                },
                {
                  "GeneralKey": {
                    "data": "(hash)",
                    "length": 21,
                  },
                },
              ],
            },
            "parents": 1,
          },
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredMultiAssets",
    "section": "xTokens",
  },
]
`;

exports[`Karura <-> Basilisk > Basilisk tranfer DAI to Karura > hrmp 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": "0x00000000000000000de0b6b3a7640000",
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x024bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": "0x00000000000000000de0b6b3a7640000",
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x024bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "all": null,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": {
                        "any": null,
                      },
                    },
                  },
                },
                "parents": 0,
              },
              "maxAssets": 1,
            },
          },
        ],
      },
    ],
    "recipient": 2090,
  },
]
`;

exports[`Karura <-> Basilisk > Basilisk tranfer DAI to Karura > system events 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "contract": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
      "from": "0xf1e86719eb3b54a62f50e9b7a867c6b08e6e2901",
      "logs": [
        {
          "address": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 67000)",
      "usedStorage": 64,
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "contract": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
      "from": "0x000000000000000000ff00000000000000000000",
      "logs": [
        {
          "address": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 67000)",
      "usedStorage": 64,
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "contract": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
      "from": "0x000000000000000000ff00000000000000000000",
      "logs": [
        {
          "address": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 50000)",
      "usedStorage": "-64",
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "messageHash": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Karura <-> Basilisk > Basilisk transfer USDC to karura > events 1`] = `
[
  {
    "data": {
      "amount": 1000000,
      "currencyId": {
        "Erc20": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
      },
      "from": "r7ts9D2xjiWoPhdnSLe3id9MAT5MADP8bBg17zP9aqRcKvj",
      "to": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Transferred",
    "section": "currencies",
  },
]
`;

exports[`Karura <-> Basilisk > Basilisk transfer USDC to karura > events 2`] = `
[
  {
    "data": {
      "contract": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
      "from": "0x4d9cf56ac6f1b4b6be4757ad0af3348fc6a918c2",
      "logs": [
        {
          "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 50000)",
      "usedStorage": "-64",
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000,
          },
          "id": {
            "Concrete": {
              "interior": {
                "X2": [
                  {
                    "Parachain": 2000,
                  },
                  {
                    "GeneralKey": {
                      "data": "(hash)",
                      "length": 21,
                    },
                  },
                ],
              },
              "parents": 1,
            },
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2100)",
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "Parachain": 2000,
                },
                {
                  "GeneralKey": {
                    "data": "(hash)",
                    "length": 21,
                  },
                },
              ],
            },
            "parents": 1,
          },
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredMultiAssets",
    "section": "xTokens",
  },
]
`;

exports[`Karura <-> Basilisk > Basilisk transfer USDC to karura > hrmp 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x021f3a10587a20114ea25ba1b388ee2dd4a337ce27",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x021f3a10587a20114ea25ba1b388ee2dd4a337ce27",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "all": null,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": {
                        "any": null,
                      },
                    },
                  },
                },
                "parents": 0,
              },
              "maxAssets": 1,
            },
          },
        ],
      },
    ],
    "recipient": 2090,
  },
]
`;

exports[`Karura <-> Basilisk > Basilisk transfer USDC to karura > system events 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "contract": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
      "from": "0xf1e86719eb3b54a62f50e9b7a867c6b08e6e2901",
      "logs": [
        {
          "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 67000)",
      "usedStorage": 64,
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "contract": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
      "from": "0x000000000000000000ff00000000000000000000",
      "logs": [
        {
          "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 67000)",
      "usedStorage": 64,
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "contract": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
      "from": "0x000000000000000000ff00000000000000000000",
      "logs": [
        {
          "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 50000)",
      "usedStorage": "-64",
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "messageHash": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Karura <-> Basilisk > Karura transfer DAI to basilisk > events 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000000,
      "currencyId": {
        "Erc20": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
      },
      "from": "rPWzRkpPjuceq6Po91sfHLZJ9wo6wzx4PAdjUH91ckv81nv",
      "to": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Transferred",
    "section": "currencies",
  },
]
`;

exports[`Karura <-> Basilisk > Karura transfer DAI to basilisk > events 2`] = `
[
  {
    "data": {
      "contract": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
      "from": "0x4d9cf56ac6f1b4b6be4757ad0af3348fc6a918c2",
      "logs": [
        {
          "address": "0x4bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 50000)",
      "usedStorage": "-64",
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000000000000000,
          },
          "id": {
            "Concrete": {
              "interior": {
                "X2": [
                  {
                    "Parachain": 2000,
                  },
                  {
                    "GeneralKey": {
                      "data": "(hash)",
                      "length": 21,
                    },
                  },
                ],
              },
              "parents": 1,
            },
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2100)",
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000000000000000,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "Parachain": 2000,
                },
                {
                  "GeneralKey": {
                    "data": "(hash)",
                    "length": 21,
                  },
                },
              ],
            },
            "parents": 1,
          },
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredMultiAssets",
    "section": "xTokens",
  },
]
`;

exports[`Karura <-> Basilisk > Karura transfer DAI to basilisk > hrmp 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": "0x00000000000000000de0b6b3a7640000",
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x024bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": "0x00000000000000000de0b6b3a7640000",
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x024bb6afb5fa2b07a5d1c499e1c3ddb5a15e709a71",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "all": null,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": {
                        "any": null,
                      },
                    },
                  },
                },
                "parents": 0,
              },
              "maxAssets": 1,
            },
          },
        ],
      },
    ],
    "recipient": 2090,
  },
]
`;

exports[`Karura <-> Basilisk > Karura transfer USDC to basilisk > events 1`] = `
[
  {
    "data": {
      "amount": 1000000,
      "currencyId": {
        "Erc20": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
      },
      "from": "r7ts9D2xjiWoPhdnSLe3id9MAT5MADP8bBg17zP9aqRcKvj",
      "to": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "Transferred",
    "section": "currencies",
  },
]
`;

exports[`Karura <-> Basilisk > Karura transfer USDC to basilisk > events 2`] = `
[
  {
    "data": {
      "contract": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
      "from": "0x4d9cf56ac6f1b4b6be4757ad0af3348fc6a918c2",
      "logs": [
        {
          "address": "0x1f3a10587a20114ea25ba1b388ee2dd4a337ce27",
          "data": "(hash)",
          "topics": [
            "(hash)",
            "(hash)",
            "(hash)",
          ],
        },
      ],
      "usedGas": "(rounded 50000)",
      "usedStorage": "-64",
    },
    "method": "Executed",
    "section": "evm",
  },
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000,
          },
          "id": {
            "Concrete": {
              "interior": {
                "X2": [
                  {
                    "Parachain": 2000,
                  },
                  {
                    "GeneralKey": {
                      "data": "(hash)",
                      "length": 21,
                    },
                  },
                ],
              },
              "parents": 1,
            },
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2100)",
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "Parachain": 2000,
                },
                {
                  "GeneralKey": {
                    "data": "(hash)",
                    "length": 21,
                  },
                },
              ],
            },
            "parents": 1,
          },
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredMultiAssets",
    "section": "xTokens",
  },
]
`;

exports[`Karura <-> Basilisk > Karura transfer USDC to basilisk > hrmp 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v2": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x021f3a10587a20114ea25ba1b388ee2dd4a337ce27",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x2": [
                        {
                          "parachain": 2000,
                        },
                        {
                          "generalKey": "0x021f3a10587a20114ea25ba1b388ee2dd4a337ce27",
                        },
                      ],
                    },
                    "parents": 1,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "all": null,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0x88dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee",
                      "network": {
                        "any": null,
                      },
                    },
                  },
                },
                "parents": 0,
              },
              "maxAssets": 1,
            },
          },
        ],
      },
    ],
    "recipient": 2090,
  },
]
`;

exports[`Karura <-> Basilisk > Karura transfer USDC to basilisk > system events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 1000000)",
      "currencyId": 9,
      "who": "bXjgry3bkMHToRvMRedUhtPzEUUXdhyVX2UwY8hY156tWH4YB",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "amount": "(rounded 1000000)",
      "currencyId": 9,
      "who": "bXjgry3bkMHToRvMRedUhtPzEUUXdhyVX2UwY8hY156tWH4YB",
    },
    "method": "Endowed",
    "section": "tokens",
  },
  {
    "data": {
      "amount": 4400,
      "currencyId": 9,
      "who": "bXj4uMHTyQyvNCLHKBv6ztwkPSx8tgsrxuFtAFfWDYntXtohw",
    },
    "method": "Deposited",
    "section": "tokens",
  },
  {
    "data": {
      "messageHash": "(hash)",
      "weight": 400000000,
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;
